--- a/.github/actions/golang/Dockerfile
+++ b/.github/actions/golang/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:1.11.4-alpine3.8
+FROM golang:1.11.4
 
 LABEL "name"="GolangCI-Lint action"
 LABEL "maintainer"="Dai Kurosawa <kurosawa7620@gmail.com>"
@@ -11,7 +11,8 @@ LABEL "com.github.actions.description"="This is an action to run GolangCI-Lint"
 
 ENV GOLANGCI_LINT_VERSION="v1.12.5"
 
-RUN wget -O - -q https://install.goreleaser.com/github.com/golangci/golangci-lint.sh | sh -s ${GOLANGCI_LINT_VERSION}
+RUN curl -sfL https://install.goreleaser.com/github.com/golangci/golangci-lint.sh \
+  | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
 
 ADD entrypoint.sh /entrypoint.sh
 
