--- a/.github/actions/golang/Dockerfile
+++ b/.github/actions/golang/Dockerfile
@@ -1,14 +1,12 @@
 FROM golangci/golangci-lint:v1.12.5
 
-LABEL "name"="GolangCI-Lint action"
-LABEL "maintainer"="Dai Kurosawa <kurosawa7620@gmail.com>"
-LABEL "version"="0.0.1"
+LABEL "name"="GolangCI-Lint action" \
+    "maintainer"="Dai Kurosawa <kurosawa7620@gmail.com>" \
+    "com.github.actions.icon"="code" \
+    "com.github.actions.color"="green-dark" \
+    "com.github.actions.name"="golangci-lint" \
+    "com.github.actions.description"="This is an action to run GolangCI-Lint"
 
-LABEL "com.github.actions.icon"="code"
-LABEL "com.github.actions.color"="green-dark"
-LABEL "com.github.actions.name"="golangci-lint"
-LABEL "com.github.actions.description"="This is an action to run GolangCI-Lint"
-
-ADD entrypoint.sh /entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
